--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="assets/icons/girl.svg" />
     <link
         href="https://fonts.googleapis.com/css2?family=Exo:wght@400;600;700;800&family=Open+Sans:wght@300;400;700&display=swap"
         rel="stylesheet">
