--- a/src/index.html
+++ b/src/index.html
@@ -63,12 +63,16 @@
                 <div class="leftBlock__skills__box">
                     <h3 class="leftBlock__skills__title">Frontend skills: </h3>
                     <ul class="leftBlock__skills__list">
-                        <li class="leftBlock__skills__item">HTML</li>
-                        <li class="leftBlock__skills__item">CSS with preprocessor Sass</li>
-                        <li class="leftBlock__skills__item">JavaScript </li>
+                        <li class="leftBlock__skills__item">HTML3/CSS5</li>
+                        <li class="leftBlock__skills__item">Sass</li>
+                        <li class="leftBlock__skills__item">Cross-browser and responsive sites</li>
+                        <li class="leftBlock__skills__item">Photoshop, Figma, Zeplin</li>
+                        <li class="leftBlock__skills__item">JavaScript (ES6) </li>
                         <li class="leftBlock__skills__item">Query (entry level)</li>
                         <li class="leftBlock__skills__item">Vue.js (entry level)</li>
                         <li class="leftBlock__skills__item">GoogleMap API</li>
+                        <li class="leftBlock__skills__item">Webpack/Gulp</li>
+                        <li class="leftBlock__skills__item">Git</li>
                     </ul>
                 </div>
 
